# MoreclipboardServer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
